<?xml version="1.0"?>
<package format="3">
  <name>image_shm</name>
  <version>0.1.0</version>
  <description>ROS 2 package for publishing and subscribing to an image topic</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
